helm3/lab3-simple-umbrella-chart/movie-watchlist-k8s-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watchlist-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: users-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/watchlist"
        backend:
          service:
            name: users-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/movies"
        backend:
          service:
            name: movies
            port:
              number: 8088
